@@ -1,3 +1,5 @@
+hdparm-9.8
+	- fix -N  to correctly use top 4 LBA bits on non-LBA48 drives
 hdparm-9.7
 	- FIX RATHER NASTY LBA48/LBA28 CONFUSION BUGS
 	- use ATA_12 by default (helps USB), ATA_16 only when needed for LBA48
